# Project-6

./: .gitignore  data_clean.py  main.py  pyproject.toml
config/: database.py  logging_config.py  setting.py
